修正部分代码

--- a/GuocheProtal/Views/Home/Index.cshtml
+++ b/GuocheProtal/Views/Home/Index.cshtml
@@ -11,11 +11,14 @@
             <div class="banner-bottom-grids">
                 <div class="col-md-7 banner-bottom-grid-text">
                     <div class="jumbotron banner-bottom-left wow fadeInLeft animated" data-wow-delay="0.5s" style="visibility: visible; -webkit-animation-delay: 0.5s;	">
-                        <h3>Nullam consectetur tristique fermentum vestibulum</h3>
-                        <h5>Cras porttitor imperdiet volutpat. Nulla malesuada lectus eros ut convallis felis <span>consectetur ut</span></h5>
-                        <p>Proin eget ipsum ultrices, aliquet velit eget, tempus tortor. Phasellus non velit sit amet diam faucibus molestie. Mauris sapien eros, mattis et elit non, tincidunt efficitur nisi augue dui iaculis nulla, a pretium nisl turpis vel augue auctor viverra aliquam .</p>
+                        <h3>国车集团——新能源绿色服务提供者</h3>
+                        <h5>绿色新能源服务是社会共赢的未来走向，也是国车集团所有同仁的共同目标</h5>
+                        <p>
+                           国车集团以新能源汽车综合服务中心作为发展起点。从国家力推新能源发展战略角度出发，以社区为窗口，将国产新能源汽车推送到千家万户。
+                           旨在营造一个以车为中心的社区服务体验中心。集团旨在打造以新能源特色文化街、镇及运营车辆为主营业务，同时带动相关产业及产品的创新型商业模式。
+                        </p>
                         <div class="see-button">
-                            <a class="btn btn-primary btn-lg see-button hvr-shutter-out-horizontal" href="about.html" role="button">See More</a>
+                            <a class="btn btn-primary btn-lg see-button hvr-shutter-out-horizontal" href="/about" role="button">更多</a>
                         </div>
                     </div>
                 </div>
@@ -34,15 +37,15 @@
         <!-- container -->
         <div class="container">
             <div class="col-md-5 specialty-info wow fadeInLeft animated" data-wow-delay="0.5s" style="visibility: visible; -webkit-animation-delay: 0.5s;">
-                <h3>Our Services</h3>
-                <h5>Cras porttitor imperdiet volutpat nulla malesuada lectus eros ut convallis felis consectetur ut </h5>
+                <h3>为您服务</h3>
+                <h5>以新能源汽车综合服务中心，为您的生活提供更加 便捷·高效·环保 的贴心服务</h5>
                 <p>
                     Integer vitae ligula sed lectus consectetur pellentesque blandit nec orci. Nulla ultricies nunc et lorem semper, quis accumsan dui aliquam aucibus sagittis placerat.
                     <span>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi non nibh nec enim sollicitudin interdum.tristique senectus et netus et malesuada fames ac turpis egestas</span>
                 </p>
-                <div class="see-button">
+                @*<div class="see-button">
                     <a class="btn btn-primary btn-lg see-button hvr-shutter-out-horizontal specialty-button" href="services.html" role="button">See More</a>
-                </div>
+                </div>*@
             </div>
             <div class="col-md-7 specialty-grids">
                 <div class="specialty-grids-top">
@@ -50,15 +53,15 @@
                         <figure class="icon">
                             <img src="~/Source/images/1.png" alt="" />
                         </figure>
-                        <h5>Proin eget ipsum ultrices</h5>
-                        <p>Sed ut perspiciis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
+                        <h5>选择国车，绿色出行</h5>
+                        <p>我们提供各种新能源 家用车，货运车，商务车等，为您的居家生活，商务出行提供更加环保绿色的解决方案</p>
                     </div>
                     <div class="col-md-6 service-box wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
                         <figure class="icon">
                             <img src="~/Source/images/2.png" alt="" />
                         </figure>
-                        <h5>Proin eget ipsum ultrices</h5>
-                        <p>Sed ut perspiciis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
+                        <h5>移动仓储，使命必达</h5>
+                        <p>移动式仓储，实时了解您的所在的位置，获取最优路线，第一时间满足您的需求</p>
                     </div>
                     <div class="clearfix"> </div>
                 </div>
@@ -67,15 +70,15 @@
                         <figure class="icon">
                             <img src="~/Source/images/3.png" alt="" />
                         </figure>
-                        <h5>Proin eget ipsum ultrices</h5>
-                        <p>Sed ut perspiciis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
+                        <h5>随时补充，智慧充电</h5>
+                        <p>我们提供遍布全国各个重点城市的智慧充电桩，为您的出行加油蓄力，保驾护航</p>
                     </div>
                     <div class="col-md-6 service-box wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
                         <figure class="icon">
                             <img src="~/Source/images/4.png" alt="" />
                         </figure>
-                        <h5>Proin eget ipsum ultrices</h5>
-                        <p>Sed ut perspiciis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
+                        <h5>特色小镇，绿色家园</h5>
+                        <p>我们致力打造以新能源为主题的新型绿色小镇，集旅游·休闲·养生为一体，在您身心疲惫之时为您提供温暖的港湾</p>
                     </div>
                     <div class="clearfix"> </div>
                 </div>
@@ -86,7 +89,7 @@
     </div>
     <!-- //specialty -->
     <!-- testimonials -->
-    <div class="testimonials">
+    @*<div class="testimonials">
         <div class="container">
             <div class="testimonial-nfo wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
                 <h3>Testimonials</h3>
@@ -98,46 +101,46 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>*@
     <!-- //testimonials -->
     <!-- news -->
     <div class="news">
         <div class="container">
             <div class="news-text">
-                <h3>News</h3>
-                <h5>Cras porttitor imperdiet volutpat nulla malesuada lectus eros <span>ut convallis felis consectetur ut </span></h5>
+                <h3>国车动态</h3>
+                <h5>国车集团——新能源绿色服务提供者</h5>
             </div>
             <div class="news-grids">
                 <div class="col-md-3 news-grid wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
-                    <a href="single.html"><h4>Integer vitae ligula sed lectus</h4></a>
-                    <span>8.00 - 10.00 | JUN 09,2014</span>
+                    <a href="single.html"><h4>四通一达，新的合作伙伴</h4></a>
+                    <span>2017年8月</span>
                     <img src="~/Source/images/img1.jpg" alt="" />
                     <div class="news-info">
-                        <p>Pellentesque ut urna eu mauris scele risque auctor volutpat et massa pers piciis iste natus scele risque auctor volutpat et massa.</p>
+                        <p>公司深耕速递、同城配送市场多年，目前国内多家网点使用我们现有的商用车型。</p>
                     </div>
                 </div>
                 <div class="col-md-3 news-grid wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
-                    <a href="single.html"><h4>Integer vitae ligula sed lectus</h4></a>
-                    <span>10.00 - 12.00 | sep 24,2014</span>
+                    <a href="single.html"><h4>大连快到科技</h4></a>
+                    <span>2018年1月</span>
                     <img src="~/Source/images/img2.jpg" alt="" />
                     <div class="news-info">
-                        <p>Pellentesque ut urna eu mauris scele risque auctor volutpat et massa pers piciis iste natus scele risque auctor volutpat et massa.</p>
+                        <p>大连快到科技公司平台拥有自有出租车号牌资源2000多张，规模为大连本土排名第一，具备资源倾斜优势。</p>
                     </div>
                 </div>
                 <div class="col-md-3 news-grid wow fadeInRight animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
-                    <a href="single.html"><h4>Integer vitae ligula sed lectus</h4></a>
-                    <span>9.00 - 10.00 | FEB 15,2014</span>
+                    <a href="single.html"><h4>上海大团特色小镇</h4></a>
+                    <span>2018年3月</span>
                     <img src="~/Source/images/img3.jpg" alt="" />
                     <div class="news-info">
-                        <p>Pellentesque ut urna eu mauris scele risque auctor volutpat et massa pers piciis iste natus scele risque auctor volutpat et massa.</p>
+                        <p>大团镇以农业发展为主要特色产业，上海市桃园种植面积2.8万多亩，其中大团镇占据1.2万亩，7次成为上海桃花节主会场。</p>
                     </div>
                 </div>
                 <div class="col-md-3 news-grid wow fadeInRight animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
-                    <a href="single.html"><h4>Integer vitae ligula sed lectus</h4></a>
-                    <span>11.00 - 10.00 | JUN 10,2014</span>
+                    <a href="single.html"><h4>旅顺口区特色康养小镇</h4></a>
+                    <span>2018年6月</span>
                     <img src="~/Source/images/img4.jpg" alt="" />
                     <div class="news-info">
-                        <p>Pellentesque ut urna eu mauris scele risque auctor volutpat et massa pers piciis iste natus scele risque auctor volutpat et massa.</p>
+                        <p>着力推动“文化+特色小镇”融合发展。实现文化让特色小镇更加美好、特色小镇让文化更具魅力的多重目标。</p>
                     </div>
                 </div>
                 <div class="clearfix"> </div>
