--- a/GuocheProtal/Views/Home/Product.cshtml
+++ b/GuocheProtal/Views/Home/Product.cshtml
@@ -1,94 +1,129 @@
 ﻿
 @{
-    ViewBag.Title = "产品";
+    ViewBag.Title = "产品中心";
 }
 
-<div class="blog">
+	<!-- products-top -->
+<div class="products-top">
+    <!-- container -->
     <div class="container">
-        <h2>Main Blog</h2>
-        <div class="single-inline wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
-            <div class="blog-to">
-
-                <a href="single.html"><img class="img-responsive sin-on" src="images/sin1.jpg" alt="" /></a>
-                <div class="blog-top">
-                    <div class="blog-left">
-                        <b>14</b>
-                        <span>Feb</span>
-                    </div>
-                    <div class="top-blog">
-                        <a class="fast" href="single.html">Sed ut perspiciatis unde omnis iste natus error sit voluptatem</a>
-                        <p>Posted by <a href="single.html">Admin</a> in <a href="#">General</a> | <a href="single.html">10 Comments</a></p>
-                        <p class="sed">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500
-                            when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap.
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500
-                            when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap.
-                        </p>
-                        <a href="single.html" class="more">Readmore<span> </span></a>
-
-                    </div>
-                    <div class="clearfix"> </div>
+        <h3 class="wow fadeInRight animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">Main Trucks Services</h3>
+        <h5 class="wow fadeInRight animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">Cras porttitor imperdiet volutpat nulla malesuada lectus eros <span>ut convallis felis consectetur ut </span></h5>
+        <div class="products-top-grids wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+            <div class="col-md-4 products-grid">
+                <div class="products-number">
+                    <p>1.</p>
                 </div>
+                <div class="products-text">
+                    <h4>Morbi convallis urna </h4>
+                    <p>Vivamus sit amet molestie orci. Nullam porttitor porta lobortis. Mauris semper feugiat varius efficitur ex vel tempus blandit.</p>
+                </div>
+                <div class="clearfix"> </div>
             </div>
-            <div class="blog-to">
-
-                <a href="single.html"><img class="img-responsive sin-on" src="images/sin.jpg" alt="" /></a>
-                <div class="blog-top">
-                    <div class="blog-left">
-                        <b>19</b>
-                        <span>July</span>
-                    </div>
-                    <div class="top-blog">
-                        <a class="fast" href="single.html">Sed ut perspiciatis unde omnis iste natus error sit voluptatem</a>
-                        <p>Posted by <a href="single.html">Admin</a> in <a href="#">General</a> | <a href="single.html">10 Comments</a></p>
-                        <p class="sed">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500
-                            when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap.
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500
-                            when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap.
-                        </p>
-                        <a href="single.html" class="more">Readmore<span> </span></a>
-
-                    </div>
-                    <div class="clearfix"> </div>
+            <div class="col-md-4 products-grid">
+                <div class="products-number">
+                    <p>2.</p>
                 </div>
+                <div class="products-text">
+                    <h4>Aliquam pret iumd</h4>
+                    <p>Vivamus sit amet molestie orci. Nullam porttitor porta lobortis. Mauris semper feugiat varius efficitur ex vel tempus blandit.</p>
+                </div>
+                <div class="clearfix"> </div>
             </div>
-            <div class="blog-to">
-
-                <a href="single.html"><img class="img-responsive sin-on" src="images/sin2.jpg" alt="" /></a>
-                <div class="blog-top">
-                    <div class="blog-left">
-                        <b>28</b>
-                        <span>July</span>
-                    </div>
-                    <div class="top-blog">
-                        <a class="fast" href="single.html">Sed ut perspiciatis unde omnis iste natus error sit voluptatem</a>
-                        <p>Posted by <a href="single.html">Admin</a> in <a href="#">General</a> | <a href="single.html">10 Comments</a></p>
-                        <p class="sed">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500
-                            when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap.
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500
-                            when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap.
-                        </p>
-                        <a href="single.html" class="more">Readmore<span> </span></a>
-
-                    </div>
-                    <div class="clearfix"> </div>
+            <div class="col-md-4 products-grid">
+                <div class="products-number">
+                    <p>3.</p>
                 </div>
+                <div class="products-text">
+                    <h4>Sed sit laoreet libero</h4>
+                    <p>Vivamus sit amet molestie orci. Nullam porttitor porta lobortis. Mauris semper feugiat varius efficitur ex vel tempus blandit.</p>
+                </div>
+                <div class="clearfix"> </div>
+            </div>
+            <div class="clearfix"> </div>
+        </div>
+        <div class="products-top-grids wow fadeInRight animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+            <div class="col-md-4 products-grid">
+                <div class="products-number">
+                    <p>4.</p>
+                </div>
+                <div class="products-text">
+                    <h4>Aliquam pret iumd</h4>
+                    <p>Vivamus sit amet molestie orci. Nullam porttitor porta lobortis. Mauris semper feugiat varius efficitur ex vel tempus blandit.</p>
+                </div>
+                <div class="clearfix"> </div>
+            </div>
+            <div class="col-md-4 products-grid">
+                <div class="products-number">
+                    <p>5.</p>
+                </div>
+                <div class="products-text">
+                    <h4>Sed sit laoreet libero</h4>
+                    <p>Vivamus sit amet molestie orci. Nullam porttitor porta lobortis. Mauris semper feugiat varius efficitur ex vel tempus blandit.</p>
+                </div>
+                <div class="clearfix"> </div>
+            </div>
+            <div class="col-md-4 products-grid">
+                <div class="products-number">
+                    <p>6.</p>
+                </div>
+                <div class="products-text">
+                    <h4>Morbi convallis urna</h4>
+                    <p>Vivamus sit amet molestie orci. Nullam porttitor porta lobortis. Mauris semper feugiat varius efficitur ex vel tempus blandit.</p>
+                </div>
+                <div class="clearfix"> </div>
+            </div>
+            <div class="clearfix"> </div>
+        </div>
+    </div>
+    <!-- container -->
+</div>
+<!-- //products-top -->
+<!-- products-bottom -->
+<div class="products-bottom">
+    <!-- container -->
+    <div class="container">
+        <h3 class="wow fadeInRight animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">Latest Trucks</h3>
+        <div class="products-bottom-grids">
+            <div class="gallery-grids">
+                <div class="gallery-grid wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+                    <a class="fancybox" href="images/6-.jpg" data-fancybox-group="gallery"><img src="images/6.jpg" class="img-style row6" alt=""><span> </span></a>
+                </div>
+                <div class="gallery-grid1 wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+                    <a class="fancybox" href="images/8-.jpg" data-fancybox-group="gallery"><img src="images/8.jpg" class="img-style row6" alt=""><span> </span></a>
+                </div>
+                <div class="gallery-grid wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+                    <a class="fancybox" href="images/5-.jpg" data-fancybox-group="gallery"><img src="images/5.jpg" class="img-style row6" alt=""><span> </span></a>
+                </div>
+                <div class="gallery-grid1 wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+                    <a class="fancybox" href="images/9-.jpg" data-fancybox-group="gallery"><img src="images/9.jpg" class="img-style row6" alt=""><span> </span></a>
+                </div>
+                <div class="gallery-grid wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+                    <a class="fancybox" href="images/10-.jpg" data-fancybox-group="gallery"><img src="images/10.jpg" class="img-style row6" alt=""><span> </span></a>
+                </div>
+                <div class="clearfix"> </div>
+            </div>
+            <div class="gallery-grids">
+                <div class="gallery-grid wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+                    <a class="fancybox" href="images/6-.jpg" data-fancybox-group="gallery"><img src="images/6.jpg" class="img-style row6" alt=""><span> </span></a>
+                </div>
+                <div class="gallery-grid wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+                    <a class="fancybox" href="images/5-.jpg" data-fancybox-group="gallery"><img src="images/5.jpg" class="img-style row6" alt=""><span> </span></a>
+                </div>
+                <div class="gallery-grid1 wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+                    <a class="fancybox" href="images/8-.jpg" data-fancybox-group="gallery"><img src="images/8.jpg" class="img-style row6" alt=""><span> </span></a>
+                </div>
+                <div class="gallery-grid wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+                    <a class="fancybox" href="images/10-.jpg" data-fancybox-group="gallery"><img src="images/10.jpg" class="img-style row6" alt=""><span> </span></a>
+                </div>
+                <div class="gallery-grid1 wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+                    <a class="fancybox" href="images/9-.jpg" data-fancybox-group="gallery"><img src="images/9.jpg" class="img-style row6" alt=""><span> </span></a>
+                </div>
+                <div class="clearfix"> </div>
             </div>
         </div>
-        <nav>
-            <ul class="pagination">
-                <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">«</span></a></li>
-                <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
-                <li><a href="#">2 <span class="sr-only"></span></a></li>
-                <li><a href="#">3 <span class="sr-only"></span></a></li>
-                <li><a href="#">4 <span class="sr-only"></span></a></li>
-                <li><a href="#">5 <span class="sr-only"></span></a></li>
-                <li> <a href="#" aria-label="Next"><span aria-hidden="true">»</span> </a> </li>
-            </ul>
-        </nav>
     </div>
+    <!-- //container -->
 </div>
-<!-- //blog -->
+<!-- products-bottom -->
 
