--- a/GuocheProtal/Views/Shared/Footer.cshtml
+++ b/GuocheProtal/Views/Shared/Footer.cshtml
@@ -5,32 +5,32 @@
             <ul>
                 <li><a href="/">首页</a></li>
                 <li><a href="/product">产品</a></li>
-                <li><a href="/service">服务</a></li>
-                <li><a href="/about">关于我们</a></li>
+                <li><a href="/news">新闻</a></li>
+                <li><a href="/join">加入我们</a></li>
                 <li><a href="/contact">联系我们</a></li>
             </ul>
-            <form>
+            @*<form>
                 <input type="text" placeholder="Email" required="">
                 <input type="submit" value="Subscribe">
-            </form>
+            </form>*@
         </div>
         <div class="col-md-3 footer-middle wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
-            <h3>集团公司地址</h3>
+            <h3>国车集团地址</h3>
             <div class="address">
                 <p>
-                    756 gt globel Place,
-                    <span>CD-Road,M 07 435.</span>
+                    上海宝山区铁山路69号吴淞科技园
+                    <span>A区9号楼B401室</span>
                 </p>
             </div>
             <div class="phone">
-                <p>+1(100)2345-6789</p>
+                <p>021-31039398</p>
             </div>
         </div>
-        <div class="col-md-3 footer-right  wow fadeInRight animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
+        @*<div class="col-md-3 footer-right  wow fadeInRight animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
             <a href="#"><img src="~/Source/images/logo.png" alt="" /></a>
             <p>国车集团简介</p>
-        </div>
-        <div class="clearfix"> </div>
+        </div>*@
+        <div class="clearfix"></div>
     </div>
     <!-- //container -->
 </div>
