--- a/GuocheProtal/Views/Shared/Header.cshtml
+++ b/GuocheProtal/Views/Shared/Header.cshtml
@@ -6,15 +6,15 @@
     <div class="container">
         <div class="header">
             <div class="head-logo">
-                <a href="index.html"><img src="~/Source/images/logo.png" alt="" /></a>
+                <a href="/"><img src="~/Source/images/logo.png" alt="" /></a>
             </div>
             <div class="top-nav">
                 <span class="menu"><img src="~/Source/images/menu.png" alt=""></span>
                 <ul class="nav1">
                     <li class="hvr-sweep-to-bottom @(ViewBag.Index==1?"active":"")"><a href="/">首页<i><img src="~/Source/images/nav-but1.png" alt="" /></i></a></li>
-                    <li class="hvr-sweep-to-bottom @(ViewBag.Index==2?"active":"")"><a href="/product">产品<i><img src="~/Source/images/nav-but4.png" alt="" /></i></a></li>
-                    <li class="hvr-sweep-to-bottom @(ViewBag.Index==3?"active":"")"><a href="/service">服务<i><img src="~/Source/images/nav-but3.png" alt="" /></i></a></li>
-                    <li class="hvr-sweep-to-bottom @(ViewBag.Index==4?"active":"")"><a href="/about">关于我们<i><img src="~/Source/images/nav-but2.png" alt="" /></i></a></li>
+                    <li class="hvr-sweep-to-bottom @(ViewBag.Index==2?"active":"")"><a href="/product">产品<i><img src="~/Source/images/nav-but3.png" alt="" /></i></a></li>
+                    <li class="hvr-sweep-to-bottom @(ViewBag.Index==3?"active":"")"><a href="/news">新闻中心<i><img src="~/Source/images/nav-but4.png" alt="" /></i></a></li>
+                    <li class="hvr-sweep-to-bottom @(ViewBag.Index==4?"active":"")"><a href="/join">加入我们<i><img src="~/Source/images/nav-but2.png" alt="" /></i></a></li>
                     <li class="hvr-sweep-to-bottom @(ViewBag.Index==5?"active":"")"><a href="/contact">联系我们<i><img src="~/Source/images/nav-but5.png" alt="" /></i></a></li>
                     <div class="clearfix"></div>
                 </ul>
