--- a/GuocheProtal/Views/Home/Contact.cshtml
+++ b/GuocheProtal/Views/Home/Contact.cshtml
@@ -1,87 +1,51 @@
 ﻿@{
     ViewBag.Title = "联系我们";
 }
+
+<!--引用百度地图API-->
+<style type="text/css">
+    html, body {
+        margin: 0;
+        padding: 0;
+    }
+
+    .iw_poi_title {
+        color: #CC5522;
+        font-size: 14px;
+        font-weight: bold;
+        overflow: hidden;
+        padding-right: 13px;
+        white-space: nowrap;
+    }
+
+    .iw_poi_content {
+        font: 12px arial,sans-serif;
+        overflow: visible;
+        padding-top: 4px;
+        white-space: -moz-pre-wrap;
+        word-wrap: break-word;
+    }
+
+    .contact-form input[type="button"] {
+          border: none;
+          outline: none;
+          color: #FFF;
+          padding: .5em 1.5em;
+          font-family: 'Open Sans', sans-serif;
+          font-size: 16px;
+          font-weight: 600;
+          margin: 0.5em 0 0 0;
+          -webkit-appearance: none;
+          background: #bb1e10;
+    }
+</style>
+<script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
 	<!-- mail -->
 <div class="mail">
     <!-- container -->
     <div class="container">
         <div class="map footer-middle wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
-            <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<meta name="keywords" content="百度地图,百度地图API，百度地图自定义工具，百度地图所见即所得工具" />
-<meta name="description" content="百度地图API自定义地图，帮助用户在可视化操作下生成百度地图" />
-<title>百度地图API自定义地图</title>
-<!--引用百度地图API-->
-<style type="text/css">
-    html,body{margin:0;padding:0;}
-    .iw_poi_title {color:#CC5522;font-size:14px;font-weight:bold;overflow:hidden;padding-right:13px;white-space:nowrap}
-    .iw_poi_content {font:12px arial,sans-serif;overflow:visible;padding-top:4px;white-space:-moz-pre-wrap;word-wrap:break-word}
-</style>
-<script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
-</head>
-
-<body>
-  <!--百度地图容器-->
-  <div style="width:1140px;height:400px;border:#ccc solid 1px;" id="dituContent"></div>
-</body>
-<script type="text/javascript">
-    //创建和初始化地图函数：
-    function initMap(){
-        createMap();//创建地图
-        setMapEvent();//设置地图事件
-        addMapControl();//向地图添加控件
-        addRemark();//向地图中添加文字标注
-    }
-    
-    //创建地图函数：
-    function createMap(){
-        var map = new BMap.Map("dituContent");//在百度地图容器中创建一个地图
-        var point = new BMap.Point(121.475697,31.369442);//定义一个中心点坐标
-        map.centerAndZoom(point,17);//设定地图的中心点和坐标并将地图显示在地图容器中
-        window.map = map;//将map变量存储在全局
-    }
-    
-    //地图事件设置函数：
-    function setMapEvent(){
-        map.enableDragging();//启用地图拖拽事件，默认启用(可不写)
-        map.enableScrollWheelZoom();//启用地图滚轮放大缩小
-        map.enableDoubleClickZoom();//启用鼠标双击放大，默认启用(可不写)
-        map.enableKeyboard();//启用键盘上下左右键移动地图
-    }
-    
-    //地图控件添加函数：
-    function addMapControl(){
-        //向地图中添加缩放控件
-	var ctrl_nav = new BMap.NavigationControl({anchor:BMAP_ANCHOR_TOP_LEFT,type:BMAP_NAVIGATION_CONTROL_LARGE});
-	map.addControl(ctrl_nav);
-        //向地图中添加缩略图控件
-	var ctrl_ove = new BMap.OverviewMapControl({anchor:BMAP_ANCHOR_BOTTOM_RIGHT,isOpen:1});
-	map.addControl(ctrl_ove);
-        //向地图中添加比例尺控件
-	var ctrl_sca = new BMap.ScaleControl({anchor:BMAP_ANCHOR_BOTTOM_LEFT});
-	map.addControl(ctrl_sca);
-    }
-    
-//文字标注数组
-    var lbPoints = [{point:"121.476173|31.369882",content:""}
-		 ];
-    //向地图中添加文字标注函数
-    function addRemark(){
-        for(var i=0;i<lbPoints.length;i++){
-            var json = lbPoints[i];
-            var p1 = json.point.split("|")[0];
-            var p2 = json.point.split("|")[1];
-            var label = new BMap.Label("<div style='padding:2px;'>"+json.content+"</div>",{point:new BMap.Point(p1,p2),offset:new BMap.Size(3,-6)});
-            map.addOverlay(label);
-            label.setStyle({borderColor:"#999"});
-        }
-    }
-    
-    initMap();//创建和初始化地图
-</script>
-</html>
+            <div style="width:1140px;height:400px;border:#ccc solid 1px;" id="dituContent"></div>
         </div>
         <div class="mail-grids">
             <div class="col-md-6 mail-grid-left wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
@@ -95,18 +59,16 @@
                 <h4>联系电话</h4>
                 <p>
                     电话: 021-31039398
-                    <span>传真: +1 234 567 9871</span>
+                    <span></span>
                     E-mail: <a href="mailto:wangjialin@gcev.net">wangjialin@@gcev.net</a>
                 </p>
             </div>
             <div class="col-md-6 contact-form wow fadeInRight animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
-                <form>
-                    <input type="text" placeholder="姓名" required="">
-                    <input type="text" placeholder="邮箱" required="">
-                    <input type="text" placeholder="主题" required="">
-                    <textarea placeholder="信息" required=""></textarea>
-                    <input type="submit" value="发送">
-                </form>
+                <input type="text" placeholder="请留下您的姓名" id="uname" />
+                <input type="text" placeholder="请留下您的邮箱" id="mail"/>
+                <textarea placeholder="请留下您的宝贵意见" id="msg"></textarea>
+                <input type="button" value="发送" id="send"/>
+
             </div>
             <div class="clearfix"> </div>
         </div>
@@ -114,3 +76,71 @@
     <!-- //container -->
 </div>
 <!-- //mail -->
+<script type="text/javascript">
+    //创建和初始化地图函数：
+    function initMap() {
+        createMap();//创建地图
+        setMapEvent();//设置地图事件
+        addMapControl();//向地图添加控件
+        addRemark();//向地图中添加文字标注
+    }
+
+    //创建地图函数：
+    function createMap() {
+        var map = new BMap.Map("dituContent");//在百度地图容器中创建一个地图
+        var point = new BMap.Point(121.475697, 31.369442);//定义一个中心点坐标
+        map.centerAndZoom(point, 17);//设定地图的中心点和坐标并将地图显示在地图容器中
+        window.map = map;//将map变量存储在全局
+    }
+
+    //地图事件设置函数：
+    function setMapEvent() {
+        map.enableDragging();//启用地图拖拽事件，默认启用(可不写)
+        map.enableScrollWheelZoom();//启用地图滚轮放大缩小
+        map.enableDoubleClickZoom();//启用鼠标双击放大，默认启用(可不写)
+        map.enableKeyboard();//启用键盘上下左右键移动地图
+    }
+
+    //地图控件添加函数：
+    function addMapControl() {
+        //向地图中添加缩放控件
+        var ctrl_nav = new BMap.NavigationControl({ anchor: BMAP_ANCHOR_TOP_LEFT, type: BMAP_NAVIGATION_CONTROL_LARGE });
+        map.addControl(ctrl_nav);
+        //向地图中添加缩略图控件
+        var ctrl_ove = new BMap.OverviewMapControl({ anchor: BMAP_ANCHOR_BOTTOM_RIGHT, isOpen: 1 });
+        map.addControl(ctrl_ove);
+        //向地图中添加比例尺控件
+        var ctrl_sca = new BMap.ScaleControl({ anchor: BMAP_ANCHOR_BOTTOM_LEFT });
+        map.addControl(ctrl_sca);
+    }
+
+    //文字标注数组
+    var lbPoints = [{ point: "121.476173|31.369882", content: "" }
+    ];
+    //向地图中添加文字标注函数
+    function addRemark() {
+        for (var i = 0; i < lbPoints.length; i++) {
+            var json = lbPoints[i];
+            var p1 = json.point.split("|")[0];
+            var p2 = json.point.split("|")[1];
+            var label = new BMap.Label("<div style='padding:2px;'>" + json.content + "</div>", { point: new BMap.Point(p1, p2), offset: new BMap.Size(3, -6) });
+            map.addOverlay(label);
+            label.setStyle({ borderColor: "#999" });
+        }
+    }
+
+    initMap();//创建和初始化地图
+
+
+    $("#send").click(function () {
+        $.ajax({
+            type: "Post",
+            url: "SendMail",
+            data: { name: $("#uname").val(), useremail: $("#mail").val(), mailContent: $("#msg").val() },
+            success: function (data) {
+                alert("感谢您的意见，我们会努力做的更好！");
+                $("#mail,#msg,#uname").val("");
+            }
+        });
+    })
+</script>
